--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,15 @@ typings/
 
 # DynamoDB Local files
 .dynamodb/
+
+#amplify
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/mock-data
+amplify/backend/amplify-meta.json
+amplify/backend/awscloudformation
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
