--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aws-amplify/api": "^2.1.6",
-    "@aws-amplify/pubsub": "^2.1.7",
+    "aws-amplify": "^2.2.6",
     "aws-amplify-react": "^3.1.7",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
